# Tome

./: .gitignore  API.md  CACHE.md  CLAUDE.md  GRPC_NODES.md  INFERENCE_SERVER.md  KLDIV.md  PLAN.md  README.md  paged_kv_kernel.py  profile_decode.py  pyproject.toml  send.sh  start_tui.sh
jax-impl/: GRPC_SETUP.md  README.md  check_device.py  device.py  example_tensor_parallel.py  generate_test_data.py  kvcache.py  load_weights.py  model.py  node.py  test_grpc_client.py  test_olmoe.py  test_simple.py
knowledge/: INFERENCE_SERVER.md  MEMORY_TUNING.md  grpo_bugs_2026_03_03.md
mlx-impl/: GRPC_SETUP.md  MLX.md  README.md  STARTING_POINT.md  attention.py  bench_comparison.py  bench_vllm_mlx.py  benchmark.py  benchmark_kernel.py  decoder.py  generate_proto.py  generate_test_data.py  kvcache.py  load_weights.py  mlp.py  model.py  node.py  paged_kv.py  rmsnorm.py  rope.py  test_components.py  test_grpc_client.py  test_grpo_new_api.py  test_grpo_rpc.py  test_kvcache_batched.py
mlx-impl/benchmarks/: bench_comparison.py  benchmark.py  benchmark_kernel.py  measure_kl_div.py  profile_decode.py
mlx-impl/tests/: test_components.py  test_grpc_client.py  test_grpo.py  test_kvcache.py  test_logprob_comparison.py
scheduler/: Cargo.toml  SCHEDULER.md  build.rs
scheduler/proto/: inference.proto
scheduler/src/: cache_trie.rs  http_api.rs  main.rs  node_client.rs  scheduler.rs
scripts/: start_node.sh  start_scheduler.sh
tests/: e2e_grpo.py
tui/: Cargo.toml
tui/src/: main.rs
