[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
futures = "0.3"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.21", features = ["http"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
