[package]
name = "tome-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
futures = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
